# tremor_analysis

./: License  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  ui.py
analysis_methods/: __init__.py  base.py  coherence.py  dummy.py  power_density.py  spectrogram.py
exapmle_directory_structure/: .gitignore  generate_sample_file.py  run_generate_sample.sh
exapmle_directory_structure/target_dir/measurement_1_pair/: left.csv  right.csv
exapmle_directory_structure/target_dir/measurement_2_single/: measurement.csv
tremor_analysis/: app.py
tremor_analysis/analysis_methods/: __init__.py  base.py  coherence.py  dummy.py  power_density.py  spectrogram.py
tremor_analysis/data_models/: analysis_result.py  config_parameter.py
tremor_analysis/ui/: input_filters.py  text_field_with_type.py
tremor_analysis/utils/: path.py  result_image.py  yaml_file_handler.py
utils/: yaml_file_handler.py
