[project]
name = "python_tremor_analysis"
version = "0.1.0"
description = "python_tremor_analysis"
authors = [
    { name = "sai10goo", email = "flute8828@gmail.com" },
    { name = "reikoyuasa"},
    { name = "shioneko37", email = "shioneko37@gmail.com" },
    { name = "KateSawada", email = "nuksawada@gmail.com" },
]
requires-python = ">= 3.11.5"


dependencies = [
    "flet==0.19.0",
    "scipy==1.12.0",
    "numpy==1.26.4",
    "tqdm==4.66.2",
    "matplotlib==3.8.2",
    "pandas==2.2.0",
    "PyYAML==6.0.1",
    "scikit-learn==1.4.1.post1",
    "dictknife==0.4.0",
]

[project.scripts]
trun = "tremor_analysis.app:main"

[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel>=0.41.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "tremor_analysis",
    "tremor_analysis.*",
]

exclude = []
